# Ashichat

./: .gitignore  README.md  project_requirements.md  project_summary.md  pyproject.toml
docs/: 01_overview.md  02_identity_and_multi_device.md  03_wire_protocol.md  04_cryptography_and_handshake.md  05_overlay_routing_and_nat.md  06_storage_and_sync.md
src/ashichat/: __init__.py  config.py  crypto.py  handshake.py  heartbeat.py  identity.py  invite.py  logging_setup.py  main.py  nat.py  node.py  overlay.py  packet.py  peer_state.py  queue_manager.py  rate_limiter.py  reconnect.py  resolution.py  session.py  storage.py  transport_tcp.py  transport_udp.py
src/ashichat/ui/: __init__.py  components.py  styles.tcss  tui.py
tests/: conftest.py  test_chaos.py  test_config.py  test_core.py  test_crypto.py  test_handshake.py  test_node_invite.py  test_packet.py  test_transport.py
