[project]
name = "ashichat"
version = "0.1.0"
description = "Decentralized, invite-only, P2P encrypted terminal messaging"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "textual>=0.50",
    "aiosqlite>=0.20",
    "base58>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
ashichat = "ashichat.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
